Fix. color form on dark mode and dark mode predefine

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -81,3 +81,7 @@
 .theme-toggle:hover {
     background-color: #8a91d4;
 }
+
+.registro{
+    background-color: #2d2d2d;
+}
