--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ body{
     height: 100%;
     box-sizing: border-box;
     top: 0;
+    left: 0;
+    border-radius: 30px;
 
     padding: 20px;
     display: flex;
